--- a/IdentitySample/appsettings.json
+++ b/IdentitySample/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connectionString": "Data Source=CHADO\\MSSQLKD14;Database=IdentitySampleDb;User=sa;Password=cagdas654x654"
+    "connectionString": "Data Source=CHADO\\MSSQLKD14;Database=IdentitySampleDb;User=sa;Password=cagdas654x654;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
